syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ProductExtraProto";
option objc_class_prefix = "ProductExtra";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";

// Good Identification
message GoodIdentificationData {
    option (routines.entity_type) = "GoodIdentification";
    option (routines.keys).keys = "good_identification_type_id, product_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: goodIdentificationTypeId, productId
    // fields
    
    string good_identification_type_id = 1 [json_name = "good_identification_type_id"]; // GoodIdentificationType    
    string product_id = 2 [json_name = "product_id"];    
    string id_value = 3 [json_name = "id_value"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9;
}


message GoodIdentificationList{
    repeated GoodIdentificationData values=1;
}


// Product Attribute
message ProductAttributeData {
    option (routines.entity_type) = "ProductAttribute";
    option (routines.keys).keys = "product_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, attrName
    // fields
        
    string product_id = 1 [json_name = "product_id"];    
    string attr_name = 2 [json_name = "attr_name"];    
    string attr_value = 3 [json_name = "attr_value"];    
    string attr_type = 4 [json_name = "attr_type"];    
    string attr_description = 5 [json_name = "attr_description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 7 [json_name = "created_tx_stamp"];    
    string id = 8 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message ProductAttributeList{
    repeated ProductAttributeData values=1;
}


// Product Calculated Info
message ProductCalculatedInfoData {
    option (routines.entity_type) = "ProductCalculatedInfo";
    option (routines.keys).keys = "product_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId
    // fields
        
    string product_id = 1 [json_name = "product_id"];    
    routines.FixedPoint total_quantity_ordered = 2 [json_name = "total_quantity_ordered"];    
    int64 total_times_viewed = 3 [json_name = "total_times_viewed"];    
    routines.FixedPoint average_customer_rating = 4 [json_name = "average_customer_rating"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9;
}


message ProductCalculatedInfoList{
    repeated ProductCalculatedInfoData values=1;
}


// Product Geo
message ProductGeoData {
    option (routines.entity_type) = "ProductGeo";
    option (routines.keys).keys = "product_id, geo_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, geoId
    // fields
        
    string product_id = 1 [json_name = "product_id"];
    string geo_id = 2 [json_name = "geo_id"]; // Geo
    string product_geo_enum_id = 3 [json_name = "product_geo_enum_id"]; // Enumeration    
    string description = 4 [json_name = "description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string id = 7 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message ProductGeoList{
    repeated ProductGeoData values=1;
}


// Product GlAccount
message ProductGlAccountData {
    option (routines.entity_type) = "ProductGlAccount";
    option (routines.keys).keys = "product_id, organization_party_id, gl_account_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, organizationPartyId, glAccountTypeId
    // fields
        
    string product_id = 1 [json_name = "product_id"];    
    string organization_party_id = 2 [json_name = "organization_party_id"];
    string gl_account_type_id = 3 [json_name = "gl_account_type_id"]; // GlAccountType    
    string gl_account_id = 4 [json_name = "gl_account_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string id = 7 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12;
}


message ProductGlAccountList{
    repeated ProductGlAccountData values=1;
}


// Product Group Order
message ProductGroupOrderData {
    option (routines.entity_type) = "ProductGroupOrder";
    option (routines.keys).keys = "group_order_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: groupOrderId
    // fields
        
    string group_order_id = 1 [json_name = "group_order_id"];    
    string product_id = 2 [json_name = "product_id"];    
    google.protobuf.Timestamp from_date = 3 [json_name = "from_date"];    
    google.protobuf.Timestamp thru_date = 4 [json_name = "thru_date"];
    string status_id = 5 [json_name = "status_id"]; // StatusItem    
    routines.FixedPoint req_order_qty = 6 [json_name = "req_order_qty"];    
    routines.FixedPoint sold_order_qty = 7 [json_name = "sold_order_qty"];    
    string job_id = 8 [json_name = "job_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 10 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message ProductGroupOrderList{
    repeated ProductGroupOrderData values=1;
}


// Product Maintenance
message ProductMaintData {
    option (routines.entity_type) = "ProductMaint";
    option (routines.keys).keys = "product_id, product_maint_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, productMaintSeqId
    // fields
        
    string product_id = 1 [json_name = "product_id"];    
    string product_maint_seq_id = 2 [json_name = "product_maint_seq_id"];
    string product_maint_type_id = 3 [json_name = "product_maint_type_id"]; // ProductMaintType    
    string maint_name = 4 [json_name = "maint_name"];    
    string maint_template_work_effort_id = 5 [json_name = "maint_template_work_effort_id"];    
    routines.FixedPoint interval_quantity = 6 [json_name = "interval_quantity"];
    string interval_uom_id = 7 [json_name = "interval_uom_id"]; // Uom
    string interval_meter_type_id = 8 [json_name = "interval_meter_type_id"]; // ProductMeterType    
    int64 repeat_count = 9 [json_name = "repeat_count"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 10 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 11 [json_name = "created_tx_stamp"];    
    string id = 12 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 15;
    map<string, google.protobuf.Any> attachments = 16;
}


message ProductMaintList{
    repeated ProductMaintData values=1;
}


// Product Meter
message ProductMeterData {
    option (routines.entity_type) = "ProductMeter";
    option (routines.keys).keys = "product_id, product_meter_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, productMeterTypeId
    // fields
        
    string product_id = 1 [json_name = "product_id"];
    string product_meter_type_id = 2 [json_name = "product_meter_type_id"]; // ProductMeterType
    string meter_uom_id = 3 [json_name = "meter_uom_id"]; // Uom    
    string meter_name = 4 [json_name = "meter_name"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string id = 7 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message ProductMeterList{
    repeated ProductMeterData values=1;
}


// Product Role
message ProductRoleData {
    option (routines.entity_type) = "ProductRole";
    option (routines.keys).keys = "product_id, party_id, role_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, partyId, roleTypeId, fromDate
    // fields
        
    string product_id = 1 [json_name = "product_id"];    
    string party_id = 2 [json_name = "party_id"];
    string role_type_id = 3 [json_name = "role_type_id"]; // RoleType    
    google.protobuf.Timestamp from_date = 4 [json_name = "from_date"];    
    google.protobuf.Timestamp thru_date = 5 [json_name = "thru_date"];    
    int64 sequence_num = 6 [json_name = "sequence_num"];    
    string comments = 7 [json_name = "comments"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 8 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 9 [json_name = "created_tx_stamp"];    
    string id = 10 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 14;
    map<string, google.protobuf.Any> attachments = 15;
}


message ProductRoleList{
    repeated ProductRoleData values=1;
}


// Product Search Result Constraint
message ProductSearchConstraintData {
    option (routines.entity_type) = "ProductSearchConstraint";
    option (routines.keys).keys = "product_search_result_id, constraint_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productSearchResultId, constraintSeqId
    // fields
        
    string product_search_result_id = 1 [json_name = "product_search_result_id"];    
    string constraint_seq_id = 2 [json_name = "constraint_seq_id"];    
    string constraint_name = 3 [json_name = "constraint_name"];    
    string info_string = 4 [json_name = "info_string"];    
    routines.Indicator include_sub_categories = 5 [json_name = "include_sub_categories"];    
    routines.Indicator is_and = 6 [json_name = "is_and"];    
    routines.Indicator any_prefix = 7 [json_name = "any_prefix"];    
    routines.Indicator any_suffix = 8 [json_name = "any_suffix"];    
    routines.Indicator remove_stems = 9 [json_name = "remove_stems"];    
    string low_value = 10 [json_name = "low_value"];    
    string high_value = 11 [json_name = "high_value"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 12 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 13 [json_name = "created_tx_stamp"];    
    string id = 14 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 15;
    map<string, google.protobuf.Any> attachments = 16;
}


message ProductSearchConstraintList{
    repeated ProductSearchConstraintData values=1;
}


// Product Search Result
message ProductSearchResultData {
    option (routines.entity_type) = "ProductSearchResult";
    option (routines.keys).keys = "product_search_result_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productSearchResultId
    // fields
        
    string product_search_result_id = 1 [json_name = "product_search_result_id"];    
    string visit_id = 2 [json_name = "visit_id"];    
    string order_by_name = 3 [json_name = "order_by_name"];    
    routines.Indicator is_ascending = 4 [json_name = "is_ascending"];    
    int64 num_results = 5 [json_name = "num_results"];    
    double seconds_total = 6 [json_name = "seconds_total"];    
    google.protobuf.Timestamp search_date = 7 [json_name = "search_date"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 8 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 9 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message ProductSearchResultList{
    repeated ProductSearchResultData values=1;
}


// Product Type Attribute
message ProductTypeAttrData {
    option (routines.entity_type) = "ProductTypeAttr";
    option (routines.keys).keys = "product_type_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productTypeId, attrName
    // fields
        
    string product_type_id = 1 [json_name = "product_type_id"];    
    string attr_name = 2 [json_name = "attr_name"];    
    string description = 3 [json_name = "description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9;
}


message ProductTypeAttrList{
    repeated ProductTypeAttrData values=1;
}


// VendorProduct
message VendorProductData {
    option (routines.entity_type) = "VendorProduct";
    option (routines.keys).keys = "product_id, vendor_party_id, product_store_group_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, vendorPartyId, productStoreGroupId
    // fields
        
    string product_id = 1 [json_name = "product_id"];    
    string vendor_party_id = 2 [json_name = "vendor_party_id"];
    string product_store_group_id = 3 [json_name = "product_store_group_id"]; // ProductStoreGroup    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message VendorProductList{
    repeated VendorProductData values=1;
}


